objects/Participante__c.object
<CustomObject>
    <fields>
        <fullName>Atualizar__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Atualizar</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ID_Externo__c</fullName>
        <externalId>true</externalId>
        <label>ID Externo</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TW1_Antigo__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Antigo</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TW1_Cliente__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Cliente</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Participantes</relationshipLabel>
        <relationshipName>Participantes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TW1_Dia_da_participacao__c</fullName>
        <label>Dia da participação</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TW1_Menor_data__c</fullName>
        <label>Primeiro dia da participação</label>
        <summarizedField>TW1_Participacao_diaria__c.TW1_Data_de_participacao__c</summarizedField>
        <summaryForeignKey>TW1_Participacao_diaria__c.TW1_Participante__c</summaryForeignKey>
        <summaryOperation>min</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>TW1_Novo__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Novo</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TW1_Promocao__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Promoção</label>
        <referenceTo>TW1_Parametros_Promocao__c</referenceTo>
        <relationshipLabel>Participantes</relationshipLabel>
        <relationshipName>Participantes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TW1_Qtde_participacao__c</fullName>
        <label>Qtde de participações</label>
        <summaryForeignKey>TW1_Participacao_diaria__c.TW1_Participante__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>TW1_Shopping__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Shopping</label>
        <referenceTo>TW1_Shopping__c</referenceTo>
        <relationshipLabel>Participantes</relationshipLabel>
        <relationshipName>Participantes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TW1_Ticket_Medio__c</fullName>
        <formula>TW1_Valor_Total__c /  TW1_Qtde_participacao__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Ticket Médio</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TW1_Valor_Total__c</fullName>
        <label>Valor (R$)</label>
        <summarizedField>TW1_Participacao_diaria__c.TW1_Valor__c</summarizedField>
        <summaryForeignKey>TW1_Participacao_diaria__c.TW1_Participante__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>TW1_Valor__c</fullName>
        <label>Valor</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Participante</label>
    <nameField>
        <displayFormat>PA#{000000}</displayFormat>
        <label>Participante</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Participantes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>